<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.guru2_android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mydiary"
        android:name="com.example.guru2_android.ui.mydiary.MydiaryFragment"
        android:label="@string/menu_mydiary"
        tools:layout="@layout/fragment_mydiary" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.guru2_android.ui.info.InfoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_info" />
</navigation>